<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="E_RFIDCommand" Id="{8094b0b5-1fbf-410a-8667-126a9665dfce}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_RFIDCommand :
(
	None 		:= 0,
	Clear		:= 1,
	Read		:= 2
) DINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>