<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="E_PalletStationState" Id="{4a12be7e-7a7b-48f8-97a0-7be6232dbe5a}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_PalletStationState :
(
	Idle 			:= 0,
	Starting		:= 1,
	Running			:= 2,
	Stopping		:= 3,
	Homing			:= 4,
	Aborting		:= 5
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>